fixing overflow issue

--- a/sass/layouts/_app.scss
+++ b/sass/layouts/_app.scss
@@ -1,7 +1,11 @@
 main{
     background-color: $lightModeBackground;
     padding: 3rem 3rem 5rem 3rem;
+    overflow-y:auto;
     
+    &::-webkit-scrollbar{
+    display: none;
+}
 }
 
 
